# crosup

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  flake.nix  install.sh
.fluentci/src/dagger/: jobs.ts
.github/: FUNDING.yml
.github/workflows/: flakehub-publish-tagged.yml  release-for-mac.yml  release-for-mac.yml.disable  release.yml  tests.yml
crates/cli/: Cargo.toml
crates/cli/src/: macros.rs  main.rs  types.rs
crates/cli/src/cmd/: add.rs  diff.rs  history.rs  init.rs  install.rs  mod.rs  search.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  graph.rs  lib.rs
crates/diff/: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/src/: file.rs  lib.rs  modification.rs
crates/installers/: Cargo.toml
crates/installers/src/: apk.rs  apt.rs  brew.rs  curl.rs  dnf.rs  emerge.rs  fleek.rs  git.rs  home_manager.rs  lib.rs  nix.rs  pacman.rs  slackpkg.rs  yum.rs  zypper.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
crates/nix/: Cargo.toml
crates/nix/src/: lib.rs
crates/nix/src/search/: client.rs  esclient.rs  matchers.rs  mod.rs  query.rs  types.rs
crates/nix/tests/: home-with-vim-git.nix  home-with-vim.nix  home.nix
crates/repo/: Cargo.toml
crates/repo/src/: file.rs  modification.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: history.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: apt.rs  brew.rs  configuration.rs  curl.rs  emerge.rs  fleek.rs  git.rs  home_manager.rs  install.rs  inventory.rs  lib.rs  nix.rs  slackpkg.rs  yum.rs
src/: config.rs  graph.rs  lib.rs  macros.rs  main.rs
src/cmd/: init.rs  install.rs
src/installers/: _apt.rs  _curl.rs  _git.rs  _nix.rs  apk.rs  apt.rs  atuin.rs  bat.rs  blesh.rs  brew.rs  curl.rs  devbox.rs  devenv.rs  direnv.rs  dnf.rs  docker.rs  emerge.rs  exa.rs  fd.rs  fish.rs  fisher.rs  flox.rs  fzf.rs  glow.rs  homebrew.rs  httpie.rs  kubectl.rs  minikube.rs  mod.rs  neovim.rs  nix.rs  pacman.rs  ripgrep.rs  tig.rs  tilt.rs  vscode.rs  yum.rs  zellij.rs  zoxide.rs  zypper.rs
src/types/: apk.rs  brew.rs  configuration.rs  curl.rs  dnf.rs  git.rs  mod.rs  pacman.rs  zypper.rs
