[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS)."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup"
readme = "README.md"
repository = "https://github.com/tsirysndr/crosup"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "3.2.20"
owo-colors = "3.5.0"
spinners = "4.1.0"
