[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS) or any Linux Distribution."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup"
readme = "../../README.md"
repository = "https://github.com/tsirysndr/crosup"
version = "0.4.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "3.2.20"
crosup-core = {path = "../core", version = "0.1.7"}
crosup-entity = {version = "0.1.0", path = "../entity"}
crosup-installers = {path = "../installers", version = "0.1.9"}
crosup-migration = {path = "../migration", version = "0.1.0"}
crosup-nix = {path = "../nix", version = "0.1.1"}
crosup-repo = {path = "../repo", version = "0.1.0"}
crosup-ssh = {path = "../ssh", version = "0.1.0"}
crosup-tui = {path = "../tui", version = "0.1.0"}
crosup-types = {path = "../types", version = "0.1.5"}
hcl-rs = "0.14.2"
inquire = "0.6.2"
owo-colors = "3.5.0"
sea-orm = {version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
serde = "1.0.164"
sha256 = "1.1.4"
similar = {version = "2.2.1", features = ["inline"]}
spinners = "4.1.0"
ssh2 = {version = "0.9.4", features = ["vendored-openssl"]}
tokio = {version = "1.28.2", features = ["full"]}
toml = "0.7.4"
