[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS) or any Linux Distribution."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup-core"
repository = "https://github.com/tsirysndr/crosup"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
crosup-installers = {path = "../installers", version = "0.1.1"}
crosup-macros = {path = "../macros", version = "0.1.1"}
crosup-ssh = {path = "../ssh", version = "0.1.0"}
crosup-types = {path = "../types", version = "0.1.1"}
hcl-rs = "0.14.2"
os-release = "0.1.0"
owo-colors = "3.5.0"
ssh2 = {version = "0.9.4", features = ["vendored-openssl"]}
toml = "0.7.4"
