[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS) or any Linux Distribution."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup-macros"
repository = "https://github.com/tsirysndr/crosup"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
