[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS) or any Linux Distribution."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup-migration"
repository = "https://github.com/tsirysndr/crosup"
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = {version = "1", features = ["attributes", "tokio1"]}
chrono = "0.4.26"

[dependencies.sea-orm-migration]
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
version = "0.11.0"
