[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to quickly setup your development environment on Chomebook (ChromeOS) or any Linux Distribution."
edition = "2021"
keywords = ["chromebook", "chromeos", "homebrew", "docker", "nix"]
license = "MIT"
name = "crosup-nix"
repository = "https://github.com/tsirysndr/crosup"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nix-editor = "0.3.0"
